# ChangelogBump

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-shared-setup.yml  python-validation.yml  ruff.yml
src/changelogbump/: Bumper.py  Changelog.py  PyProject.py  Version.py  __init__.py  app.py
tests/: test_app.py  test_changelog.py  test_pyproject.py  test_version.py
