[project]
name = "changelogbump"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "click (>=8.2.1,<9.0.0)", "toml (>=0.10.2,<0.11.0)",]
[[project.authors]]
name = "Andrew Galloway"
email = "agalloway@blueorigin.com"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.2.0"
[[tool.poetry.packages]]
include = "changelogbump"
from = "src"

[tool.poetry.scripts]
changelogbump = "changelogbump.app:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
